feat: update container images to use GitHub Container Registry
- Changed the image references for cyclops-ctrl and cyclops-ui to use ghcr.io/andersan81 instead of cyclopsui.

docs: add development guide and script documentation

- Created DEVELOPMENT.md for setting up and running Cyclops in development mode.
- Added README.md in scripts directory to document available scripts.

scripts: add development setup and service start scripts

- Introduced dev-setup.sh for initial environment setup, including dependency checks and .env file creation.
- Added dev-start.sh to concurrently start both backend and frontend services.
- Created dev-backend.sh and dev-frontend.sh for starting individual services.

fix: improve error handling and output in scripts

- Enhanced scripts with colored output for better visibility.
- Added checks for existing .env files and provided warnings for missing configurations.
- Implemented cleanup for background processes on script exit.

--- a/install/chart/templates/cyclops-ui/deployment.yaml
+++ b/install/chart/templates/cyclops-ui/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: cyclops-ui
-          image: {{ printf "cyclopsui/cyclops-ui:%s" (default .Chart.AppVersion (.Values.image).tag) }}
+          image: {{ printf "ghcr.io/andersan81/cyclops-ui:%s" (default .Chart.AppVersion (.Values.image).tag) }}
           ports:
             - containerPort: 80
           env:
