--- a/cyclops-ui/.env.template
+++ b/cyclops-ui/.env.template
@@ -1,3 +1,4 @@
 NODE_ENV=production
 REACT_APP_CYCLOPS_CTRL_HOST=http://localhost:8888
 REACT_APP_ENABLE_STREAMING=true
+REACT_APP_SUPPORT_EMAIL=your-email@example.com
