fix: update namespace handling and improve resource status color coding

--- a/cyclops-ctrl/.env.template
+++ b/cyclops-ctrl/.env.template
@@ -1,7 +1,7 @@
 DISABLE_TELEMETRY=true
 PORT=8888
-WATCH_NAMESPACE=cyclops
+WATCH_NAMESPACE=vision
 WATCH_NAMESPACE_HELM=
 CYCLOPS_VERSION=v0.0.0
-MODULE_TARGET_NAMESPACE=vision
+MODULE_TARGET_NAMESPACE=
 MAX_CONCURRENT_RECONCILES=
