chore: update dependencies and TypeScript configuration
- Added @types/classnames and classnames to package.json
- Updated @types/mdx and @types/testing-library__jest-dom versions
- Modified tsconfig.json to explicitly specify types and include ES6 libraries
- Updated yarn.lock to reflect new dependencies and versions

--- a/cyclops-ui/tsconfig.json
+++ b/cyclops-ui/tsconfig.json
@@ -9,7 +9,9 @@
     "skipLibCheck": true, // Optional: Skip type checking of declaration files
     "moduleResolution": "node", // Use Node's module resolution strategy
     "allowSyntheticDefaultImports": true, // Helps with importing default exports
-    "sourceMap": true // Optional: Generate source maps
+    "sourceMap": true, // Optional: Generate source maps
+    "types": ["node", "react", "react-dom"], // Explicitly specify types to include
+    "lib": ["dom", "dom.iterable", "es6"] // Include DOM and ES6 libraries
   },
   "include": ["src/**/*.tsx", "src/**/*.ts"], // Include your source files
   "exclude": ["node_modules"] // Exclude node_modules
