--- a/cyclops-ui/package.json
+++ b/cyclops-ui/package.json
@@ -9,10 +9,12 @@
     "@ant-design/icons": "^5.3.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@rmlio/matey": "^1.0.4",
+    "@types/classnames": "^2.3.0",
     "ace-builds": "^1.4.14",
     "antd": "^5.14.0",
     "axios": "^1.7.4",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.5.1",
     "codeblock": "^0.4.0-pre.3",
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
@@ -77,8 +79,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.6",
+    "@types/mdx": "^2.0.13",
     "@types/react": "^18.3.12",
     "@types/react-gauge-chart": "^0.4.3",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^7.1.2",
